--- a/genomicapp/templates/layout.html
+++ b/genomicapp/templates/layout.html
@@ -11,12 +11,18 @@
 
         <meta charset="utf-8">
 
+		{% if title %}
+            <title>Genomic App - {{title}}</title>
+        {% else %}
+            <title>Genomic App</title>
+        {% endif %}
+
     </head>
 
     <body>
         {% block content %}
 
-        
+
 
         {% endblock content%}
 
