Started conneccting form outputs to python scripts

--- a/genomicapp/templates/home.html
+++ b/genomicapp/templates/home.html
@@ -15,6 +15,10 @@
 						{{ form.organism }}
 					</div>
 					<div>
+						{{ form.gspr.label }}
+						{{ form.gspr }}
+					</div>
+					<div>
 						{{ form.gsps.label }}
 						{{ form.gsps }}
 					</div>
